# OpenGL-Snake-Game

./: CMakeLists.txt  README.md
include/: Food.h  randomGenerate.h  snake.h
src/: Food.cpp  main.cpp  randomGenerate.cpp  snake.cpp
